# bi-assistant

./: .env.example  .gitignore  README.md  docker-compose.yml  eval-mockup.html
backend/: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  gap_registry.jsonl  pyproject.toml  requirements-prod.txt  requirements.txt  run.py  t.txt
backend/app/: dependencies.py  main.py
backend/docs/: architecture-notes.md  sql-security-model.md
backend/eval/: README.md  evaluation_trace_results.json  phase2_trace_questions.json  questions_example.json  run_evaluation.py
backend/metadata/: access_policies.yaml  data_dictionary.yaml  evaluation_goldset.json  intent_catalog.yaml  kpi_catalog.yaml  report_catalog.json  semantic_layer.yaml  sql_templates.yaml  sql_validator_rules.yaml  visualization_rules.yaml
backend/sql/: 01_create_hr_bi_view.sql
backend/tests/: TDD_README_FA.md  conftest.py  test_adapters_response_builder.py  test_analytics_executor.py  test_architecture.py  test_ast_guard.py  test_audit_integrity.py  test_backend_improvements.py  test_composition_root_single_source.py  test_config_single_source.py  test_connections_domain.py  test_connections_repository.py  test_connections_routes.py  test_controlled_dynamic.py  test_crypto.py  test_dead_code_removed.py  test_dip_boundaries.py  test_domain_and_validator.py  test_domain_entities.py  test_eval_api.py  test_eval_extract_result.py  test_eval_models.py  test_eval_run_trigger.py  test_eval_runner.py  test_eval_seed.py  test_eval_trigger_options.py  test_hr_bi_route.py  test_intent_rules.py  (+28 more)
(+195 files in other folders)
