[project]
name = "bi-assistant-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136",
    "fastapi-offline>=1.7",
    "uvicorn[standard]>=0.49",
    "pydantic>=2.13",
    "pydantic-settings>=2.14",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.18",
    "asyncpg>=0.31",
    "psycopg2-binary>=2.9",
    "pandas>=3.0",
    "numpy>=2.4",
    "python-dotenv>=1.2",
    "pyyaml>=6.0",
    "httpx>=0.28",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.4",
    "ruff>=0.15",
    "watchfiles>=1.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
